<resources>
    <string name="app_name">TeamProject</string>

    <string name="facebook_app_id">873009302900995</string>
    <string name="fb_login_protocol_scheme">fb873009302900995</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name='signin'>로그인</string>
    <string name="create_account">회원가입</string>
    <string name="signup">회원가입</string>
    <string name="no_account">"계정이 없다면, 회원가입 후 이용해주세요"</string>
    <string name="title">Wooah</string>

    <!-- Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="alarm">Alarm</string>
    <string name="account">Account</string>

    <!-- Create -->
    <string name="cfm_password">Confirm Password</string>
    <string name="nickname">Name</string>
    <string name="create">완료</string>
    <string name="cancel">취소</string>

    <!-- Upload -->
    <string name="upload">업로드</string>


    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="unfollow">언팔로우</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>
    <string name="modify" />

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>