<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="150"
        android:src="@drawable/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50"
            android:layout_marginRight="50"
            android:layout_marginBottom="20"
            android:hint="@string/email" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50"
            android:layout_marginRight="50"
            android:layout_marginBottom="20"
            android:hint="@string/password" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="45"
            android:layout_marginLeft="50"
            android:layout_marginRight="50"
            android:layout_marginBottom="10"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/signin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95"
            android:text="@string/no_account" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="35"
            android:layout_marginStart="110"
            android:layout_marginBottom="200"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/signup" />

    </LinearLayout>

</RelativeLayout>